# wgui

./: .gitignore  Cargo.toml  README.md
examples/clicker/: Cargo.toml  index.html
examples/clicker/src/: draw.wgsl  framework.rs  init.rs  lib.rs  main.rs  resize.wgsl  shader.wgsl  state.rs  w__fragment.wgsl  w__vertex.wgsl
src/: lib.rs
